@@ -123,7 +123,10 @@ CONFIG_TEMP_PATH_DESC=Temp Path Desc
 CONFIG_TEMP_PATH_LABEL=Temp Path
 CONFIG_WEB_SERVICES_DESC=Web Services Desc
 CONFIG_WEB_SERVICES_LABEL=Web Services
-
+CONFIG_COOKIE_DOMAIN_LABEL=Cookie Domain
+CONFIG_COOKIE_DOMAIN_DESC=Domain to use when setting session cookies. Preceed domain with '.' if cookie should be valid for all subdomains.
+CONFIG_COOKIE_PATH_LABEL=Cookie Path
+CONFIG_COOKIE_PATH_DESC=Path the cookie should be valid for.
 
 
 
